// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox defaultChecked 1`] = `
<div
  class="za-checkbox za-checkbox--checked"
>
  <div
    class="za-checkbox__wrapper"
  >
    <span
      class="za-checkbox__inner"
    />
    <span
      class="za-checkbox__text"
    >
      foo
    </span>
    <input
      checked=""
      class="za-checkbox__input"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox disabled 1`] = `
<div
  class="za-checkbox za-checkbox--disabled"
>
  <div
    class="za-checkbox__wrapper"
  >
    <span
      class="za-checkbox__inner"
    />
    <span
      class="za-checkbox__text"
    >
      foo
    </span>
    <input
      class="za-checkbox__input"
      disabled=""
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox renders correctly 1`] = `
<div
  class="za-checkbox za-checkbox--checked"
>
  <div
    class="za-checkbox__wrapper"
  >
    <span
      class="za-checkbox__inner"
    />
    <span
      class="za-checkbox__text"
    >
      foo
    </span>
    <input
      checked=""
      class="za-checkbox__input"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox.Group render defaultValue correctly 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--radius"
>
  <div
    class="za-checkbox"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="0"
      />
    </div>
  </div>
  <div
    class="za-checkbox za-checkbox--checked"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-checkbox__input"
        type="checkbox"
        value="1"
      />
    </div>
  </div>
  <div
    class="za-checkbox"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox.Group render value correctly 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--radius"
>
  <div
    class="za-checkbox za-checkbox--checked"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="za-checkbox__input"
        type="checkbox"
        value="0"
      />
    </div>
  </div>
  <div
    class="za-checkbox"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="1"
      />
    </div>
  </div>
  <div
    class="za-checkbox"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--radius"
>
  <div
    class="za-checkbox"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="0"
      />
    </div>
  </div>
  <div
    class="za-checkbox za-checkbox--checked"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="za-checkbox__input"
        type="checkbox"
        value="1"
      />
    </div>
  </div>
  <div
    class="za-checkbox"
  >
    <div
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox__inner"
      />
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox.Group type is button 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--button za-checkbox-group--radius"
>
  <button
    aria-disabled="false"
    class="za-button za-checkbox za-button--primary za-button--xs za-button--radius za-button--ghost"
    role="button"
    type="button"
  >
    <span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="0"
      />
      选项一
    </span>
  </button>
  <button
    aria-disabled="false"
    class="za-button za-checkbox za-button--primary za-button--xs za-button--radius za-button--ghost"
    role="button"
    type="button"
  >
    <span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="1"
      />
      选项二
    </span>
  </button>
  <button
    aria-disabled="false"
    class="za-button za-checkbox za-button--primary za-button--xs za-button--radius za-button--ghost"
    role="button"
    type="button"
  >
    <span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="2"
      />
      选项三
    </span>
  </button>
</div>
`;

exports[`Checkbox.Group type is cell 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--cell za-checkbox-group--radius"
>
  <div
    class="za-cell za-cell--link"
  >
    <div
      class="za-cell__inner"
    >
      <div
        class="za-cell__header"
      />
      <div
        class="za-cell__body"
      >
        <div
          class="za-cell__content"
        >
          <div
            class="za-checkbox"
          >
            <div
              class="za-checkbox__wrapper"
            >
              <span
                class="za-checkbox__inner"
              />
              <span
                class="za-checkbox__text"
              >
                选项一
              </span>
              <input
                class="za-checkbox__input"
                type="checkbox"
                value="0"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-cell__footer"
      />
    </div>
  </div>
  <div
    class="za-cell za-cell--link"
  >
    <div
      class="za-cell__inner"
    >
      <div
        class="za-cell__header"
      />
      <div
        class="za-cell__body"
      >
        <div
          class="za-cell__content"
        >
          <div
            class="za-checkbox"
          >
            <div
              class="za-checkbox__wrapper"
            >
              <span
                class="za-checkbox__inner"
              />
              <span
                class="za-checkbox__text"
              >
                选项二
              </span>
              <input
                class="za-checkbox__input"
                type="checkbox"
                value="1"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-cell__footer"
      />
    </div>
  </div>
  <div
    class="za-cell za-cell--link"
  >
    <div
      class="za-cell__inner"
    >
      <div
        class="za-cell__header"
      />
      <div
        class="za-cell__body"
      >
        <div
          class="za-cell__content"
        >
          <div
            class="za-checkbox"
          >
            <div
              class="za-checkbox__wrapper"
            >
              <span
                class="za-checkbox__inner"
              />
              <span
                class="za-checkbox__text"
              >
                选项三
              </span>
              <input
                class="za-checkbox__input"
                type="checkbox"
                value="2"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-cell__footer"
      />
    </div>
  </div>
</div>
`;
